--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       background: #ffffff;
       color: #002b5c;
       line-height: 1.6;
+      transition: 0.3s;
     }
     header {
       background: #002b5c;
@@ -27,6 +28,24 @@
       font-size: 18px;
       opacity: 0.9;
     }
+
+    /* Language button */
+    .lang-switch {
+      position: fixed;
+      top: 15px;
+      right: 15px;
+      background: #0066cc;
+      color: white;
+      padding: 8px 15px;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 14px;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.2);
+    }
+    .lang-switch:hover {
+      background: #004a99;
+    }
+
     section {
       max-width: 950px;
       margin: auto;
@@ -38,6 +57,7 @@
       margin-bottom: 25px;
       color: #003b78;
     }
+
     .gallery {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -48,6 +68,7 @@
       border-radius: 12px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.15);
     }
+
     .features ul {
       list-style: none;
       padding: 0;
@@ -65,6 +86,7 @@
       color: #0066cc;
       font-weight: bold;
     }
+
     footer {
       background: #002b5c;
       color: white;
@@ -73,23 +95,62 @@
       font-size: 14px;
       margin-top: 40px;
     }
+
+    .cn { display: none; }
   </style>
+
+  <script>
+    function switchLanguage() {
+      const en = document.querySelectorAll('.en');
+      const cn = document.querySelectorAll('.cn');
+      const btn = document.getElementById('langBtn');
+
+      if (btn.innerText === "中文") {
+        btn.innerText = "English";
+        en.forEach(e => e.style.display = "none");
+        cn.forEach(e => e.style.display = "block");
+      } else {
+        btn.innerText = "中文";
+        en.forEach(e => e.style.display = "block");
+        cn.forEach(e => e.style.display = "none");
+      }
+    }
+  </script>
 </head>
+
 <body>
+  <div class="lang-switch" id="langBtn" onclick="switchLanguage()">中文</div>
+
   <header>
-    <h1>Smart ID Assistive Mode</h1>
-    <p>Digital Identity for All — Inclusivity Through Accessible Design</p>
+    <h1 class="en">Smart ID Assistive Mode</h1>
+    <p class="en">Digital Identity for All — Inclusivity Through Accessible Design</p>
+
+    <h1 class="cn">智慧身份辅助模式</h1>
+    <p class="cn">让数字身份更易懂、更易用、更包容</p>
   </header>
 
+  <!-- ABOUT -->
   <section>
-    <h2>About the Project</h2>
-    <p>
-      Smart ID Assistive Mode is designed to ensure every Malaysian — seniors, low-literacy users, persons with disabilities, and rural communities — can access Smart ID digital services confidently and independently. This demo showcases the interface screens of our proposed Assistive Mode.
+    <h2 class="en">About the Project</h2>
+    <h2 class="cn">项目简介</h2>
+
+    <p class="en">
+      Smart ID Assistive Mode ensures every Malaysian — seniors, low-literacy users,
+      persons with disabilities, and rural communities — can access digital identity
+      services confidently. This demo showcases our proposed Assistive Mode interface.
+    </p>
+
+    <p class="cn">
+      智慧身份辅助模式旨在让所有马来西亚人——包括乐龄人士、识字率低的用户、
+      残障人士和乡区用户——都能够轻松使用数字身份服务。本网站展示我们的辅助模式界面设计。
     </p>
   </section>
 
+  <!-- GALLERY -->
   <section>
-    <h2>UI Mockup Gallery</h2>
+    <h2 class="en">UI Mockup Gallery</h2>
+    <h2 class="cn">界面原型展示</h2>
+
     <div class="gallery">
       <img src="mockup-1.png" alt="Mockup 1" />
       <img src="mockup-2.png" alt="Mockup 2" />
@@ -99,28 +160,52 @@
     </div>
   </section>
 
+  <!-- FEATURES -->
   <section class="features">
-    <h2>Key Features</h2>
-    <ul>
-      <li>Large text and large buttons for seniors</li>
+    <h2 class="en">Key Features</h2>
+    <h2 class="cn">核心功能</h2>
+
+    <ul class="en">
+      <li>Large text and buttons for seniors</li>
       <li>Icon-based menus for low literacy users</li>
-      <li>Multi-language support: English, BM, 中文, தமிழ்</li>
-      <li>Screen reader & voice instruction mode</li>
-      <li>Gesture-based navigation for motor disabilities</li>
-      <li>No login required — activate via Smart ID tap</li>
-      <li>Offline-ready for rural kiosks</li>
+      <li>Multi-language interface: EN, BM, 中文, தமிழ்</li>
+      <li>Screen reader & voice instruction</li>
+      <li>Gesture-based navigation</li>
+      <li>One-tap activation with Smart ID</li>
+      <li>Offline-ready for rural areas</li>
+    </ul>
+
+    <ul class="cn">
+      <li>大字、大按钮界面设计</li>
+      <li>图标式菜单，适合低识字用户</li>
+      <li>多语言支持：EN、BM、中文、Tamil</li>
+      <li>语音朗读模式与语音指示</li>
+      <li>适合行动不便者的手势操作</li>
+      <li>一键启用，无需登录</li>
+      <li>支持离线模式，适用于乡区</li>
     </ul>
   </section>
 
+  <!-- FLOW -->
   <section>
-    <h2>User Flow</h2>
-    <p>
-      1️⃣ User taps Smart ID → 2️⃣ System detects needs → 3️⃣ Assistive UI loads → 4️⃣ User follows large-button or voice-guided steps → 5️⃣ Service completed smoothly.
+    <h2 class="en">User Flow</h2>
+    <h2 class="cn">用户流程</h2>
+
+    <p class="en">
+      1️⃣ Tap Smart ID → 2️⃣ System detects needs → 3️⃣ Assistive UI loads →
+      4️⃣ User follows guided steps → 5️⃣ Task completed smoothly.
+    </p>
+
+    <p class="cn">
+      1️⃣ 轻触 Smart ID → 2️⃣ 系统侦测用户需求 → 3️⃣ 加载辅助模式 →
+      4️⃣ 用户根据引导操作 → 5️⃣ 顺利完成服务。
     </p>
   </section>
 
   <footer>
     Smart ID Assistive Mode — Team 04 Peeps | Inclusivity Track Hackathon 2025
   </footer>
+
 </body>
 </html>
+
