Fix image source paths in index.html
Updated image source paths in the gallery section.

--- a/index.html
+++ b/index.html
@@ -183,11 +183,11 @@
     <h2 class="bm">Galeri Reka Bentuk UI</h2>
 
     <div class="gallery">
-      <img src="assets/mockup-1.png" alt="Mockup 1" />
-      <img src="assets/mockup-2.png" alt="Mockup 2" />
-      <img src="assets/mockup-3.png" alt="Mockup 3" />
-      <img src="assets/mockup-4.png" alt="Mockup 4" />
-      <img src="assets/mockup-5.png" alt="Mockup 5" />
+      <img src="mockup-1.png" alt="Mockup 1" />
+      <img src="mockup-2.png" alt="Mockup 2" />
+      <img src="mockup-3.png" alt="Mockup 3" />
+      <img src="mockup-4.png" alt="Mockup 4" />
+      <img src="mockup-5.png" alt="Mockup 5" />
     </div>
   </section>
 
