--- a/index.html
+++ b/index.html
@@ -12,19 +12,7 @@
       background: #ffffff;
       color: #002b5c;
       line-height: 1.6;
-      transition: 0.3s;
     }
-
-    /* Fade-in animation */
-    .fade-in {
-      opacity: 0;
-      animation: fadeIn 1.1s ease forwards;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
     header {
       background: #002b5c;
       color: white;
@@ -39,27 +27,6 @@
       font-size: 18px;
       opacity: 0.9;
     }
-
-    /* Language button */
-    .lang-switch {
-      position: fixed;
-      top: 15px;
-      right: 15px;
-      background: #0066cc;
-      color: white;
-      padding: 8px 15px;
-      border-radius: 8px;
-      cursor: pointer;
-      font-size: 14px;
-      box-shadow: 0 3px 8px rgba(0,0,0,0.2);
-      transition: 0.3s;
-      z-index: 1000;
-    }
-    .lang-switch:hover {
-      background: #004a99;
-      transform: scale(1.05);
-    }
-
     section {
       max-width: 950px;
       margin: auto;
@@ -71,7 +38,6 @@
       margin-bottom: 25px;
       color: #003b78;
     }
-
     .gallery {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -81,12 +47,7 @@
       width: 100%;
       border-radius: 12px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.15);
-      transition: 0.3s;
     }
-    .gallery img:hover {
-      transform: scale(1.03);
-    }
-
     .features ul {
       list-style: none;
       padding: 0;
@@ -96,7 +57,6 @@
       margin-bottom: 12px;
       padding-left: 20px;
       position: relative;
-      transition: 0.3s;
     }
     .features li::before {
       content: "✔";
@@ -105,11 +65,6 @@
       color: #0066cc;
       font-weight: bold;
     }
-    .features li:hover {
-      transform: translateX(5px);
-      color: #004a99;
-    }
-
     footer {
       background: #002b5c;
       color: white;
@@ -118,130 +73,129 @@
       font-size: 14px;
       margin-top: 40px;
     }
-
-    .cn, .bm { display: none; }
   </style>
-
-  <script>
-    function switchLanguage() {
-      const languages = ["en", "cn", "bm"];
-      const btn = document.getElementById('langBtn');
-      const current = btn.getAttribute("data-lang");
-
-      let nextIndex = (languages.indexOf(current) + 1) % languages.length;
-      let nextLang = languages[nextIndex];
-
-      document.querySelectorAll('.en').forEach(e => e.style.display = nextLang === 'en' ? 'block' : 'none');
-      document.querySelectorAll('.cn').forEach(e => e.style.display = nextLang === 'cn' ? 'block' : 'none');
-      document.querySelectorAll('.bm').forEach(e => e.style.display = nextLang === 'bm' ? 'block' : 'none');
-
-      btn.setAttribute("data-lang", nextLang);
-      btn.innerText = nextLang === 'en' ? '中文' : nextLang === 'cn' ? 'BM' : 'English';
-    }
-  </script>
 </head>
-
 <body>
-  <div class="lang-switch" id="langBtn" data-lang="en" onclick="switchLanguage()">中文</div>
-
-  <header class="fade-in">
-    <h1 class="en">Smart ID Assistive Mode</h1>
-    <p class="en">Digital Identity for All — Accessible, Inclusive, Empowering</p>
-
-    <h1 class="cn">智慧身份辅助模式</h1>
-    <p class="cn">打造人人都能使用的数字身份体验</p>
-
-    <h1 class="bm">Mod Bantuan Smart ID</h1>
-    <p class="bm">Identiti Digital Untuk Semua — Mudah, Aksesibel & Inklusif</p>
+  <header>
+    <h1>Smart ID Assistive Mode</h1>
+    <p>Digital Identity for All — Inclusivity Through Accessible Design</p>
   </header>
 
-  <!-- ABOUT -->
-  <section class="fade-in">
-    <h2 class="en">About the Project</h2>
-    <h2 class="cn">项目简介</h2>
-    <h2 class="bm">Tentang Projek</h2>
-
-    <p class="en">
-      Smart ID Assistive Mode enhances national digital identity accessibility by supporting seniors,
-      low-literacy individuals, people with disabilities, and rural communities.
-    </p>
-
-    <p class="cn">
-      智慧身份辅助模式专为乐龄人士、低识字用户、残障群体与乡区居民设计，提升数字身份服务的可用性与便利度。
-    </p>
-
-    <p class="bm">
-      Mod Bantuan Smart ID memastikan warga emas, pengguna berliterasi rendah, OKU dan komuniti luar bandar
-      dapat menggunakan identiti digital dengan lebih mudah.
+  <section>
+    <h2>About the Project</h2>
+    <p>
+      Smart ID Assistive Mode is designed to ensure every Malaysian — seniors, low-literacy users, persons with disabilities, and rural communities — can access Smart ID digital services confidently and independently. This demo showcases the interface screens of our proposed Assistive Mode.
     </p>
   </section>
 
-  <!-- GALLERY -->
-  <section class="fade-in">
-    <h2 class="en">UI Mockup Gallery</h2>
-    <h2 class="cn">界面原型展示</h2>
-    <h2 class="bm">Galeri Reka Bentuk UI</h2>
-
+  <section>
+    <h2>UI Mockup Gallery</h2>
     <div class="gallery">
-      <img src="mockup-1.png" alt="Mockup 1" />
-      <img src="mockup-2.png" alt="Mockup 2" />
-      <img src="mockup-3.png" alt="Mockup 3" />
-      <img src="mockup-4.png" alt="Mockup 4" />
-      <img src="mockup-5.png" alt="Mockup 5" />
+      <img src="assets/mockup-1.png" alt="Mockup 1" />
+      <img src="assets/mockup-2.png" alt="Mockup 2" />
+      <img src="assets/mockup-3.png" alt="Mockup 3" />
+      <img src="assets/mockup-4.png" alt="Mockup 4" />
+      <img src="assets/mockup-5.png" alt="Mockup 5" />
     </div>
   </section>
 
-  <!-- FEATURES -->
-  <section class="features fade-in">
-    <h2 class="en">Key Features</h2>
-    <h2 class="cn">核心功能</h2>
-    <h2 class="bm">Ciri Utama</h2>
-
-    <ul class="en">
-      <li>Large text & buttons for seniors</li>
+  <section class="features">
+    <h2>Key Features</h2>
+    <ul>
+      <li>Large text and large buttons for seniors</li>
       <li>Icon-based menus for low literacy users</li>
-      <li>Multi-language support</li>
-      <li>Screen reader voice guidance</li>
-      <li>Gesture navigation for motor disabilities</li>
-      <li>One-tap activation</li>
-      <li>Offline-ready for rural areas</li>
-    </ul>
-
-    <ul class="cn">
-      <li>大字体、大按钮设计</li>
-      <li>图标式操作界面</li>
-      <li>多语言支持</li>
-      <li>语音朗读与语音导航</li>
-      <li>手势操作模式</li>
-      <li>一触即用，无需登录</li>
-      <li>支持离线使用，适合乡区</li>
-    </ul>
-
-    <ul class="bm">
-      <li>Teks besar & butang besar</li>
-      <li>Menu berasaskan ikon</li>
-      <li>Sokongan pelbagai bahasa</li>
-      <li>Navigasi suara pembaca skrin</li>
-      <li>Navigasi berasaskan gerakan tangan</li>
-      <li>Aktif dengan satu sentuhan</li>
-      <li>Mesra luar bandar (tanpa internet)</li>
+      <li>Multi-language support: English, BM, 中文, தமிழ்</li>
+      <li>Screen reader & voice instruction mode</li>
+      <li>Gesture-based navigation for motor disabilities</li>
+      <li>No login required — activate via Smart ID tap</li>
+      <li>Offline-ready for rural kiosks</li>
     </ul>
   </section>
 
-  <!-- FLOW -->
-  <section class="fade-in">
-    <h2 class="en">User Flow</h2>
-    <h2 class="cn">用户流程</h2>
-    <h2 class="bm">Aliran Pengguna</h2>
-
-    <p class="en">1️⃣ Tap Smart ID → 2️⃣ System detects needs → 3️⃣ Assistive UI loads → 4️⃣ Guided steps → 5️⃣ Completed</p>
-    <p class="cn">1️⃣ 轻触 Smart ID → 2️⃣ 系统侦测需求 → 3️⃣ 载入辅助界面 → 4️⃣ 按指示操作 → 5️⃣ 完成服务</p>
-    <p class="bm">1️⃣ Sentuh Smart ID → 2️⃣ Sistem mengesan keperluan → 3️⃣ UI bantuan muncul → 4️⃣ Ikut panduan → 5️⃣ Selesai</p>
+  <section>
+    <h2>User Flow</h2>
+    <p>
+      1️⃣ User taps Smart ID → 2️⃣ System detects needs → 3️⃣ Assistive UI loads → 4️⃣ User follows large-button or voice-guided steps → 5️⃣ Service completed smoothly.
+    </p>
   </section>
 
   <footer>
     Smart ID Assistive Mode — Team 04 Peeps | Inclusivity Track Hackathon 2025
   </footer>
+  <section class="fade-in">
+    <h2>Pitch Content</h2>
+    <h3>1. Title</h3>
+    <p><strong>Smart ID Assistive Mode: Making Digital Identity Accessible for Every Malaysian</strong><br>Team: 04 Peeps — Track: Inclusivity</p>
 
-</body>
+    <h3>2. Problem Statement</h3>
+    <p>Malaysia is rapidly expanding its digital government ecosystem. However, many citizens still face significant accessibility barriers:</p>
+    <ul>
+      <li>Elderly users struggle with small text, complex UI, and hand tremors.</li>
+      <li>Persons with disabilities cannot navigate standard interfaces.</li>
+      <li>Low literacy users have difficulty understanding text.</li>
+      <li>Rural communities have low digital exposure and confidence.</li>
+    </ul>
+    <p>As a result: Exclusion from services, high counter costs, slow digital adoption, and public frustration.</p>
+
+    <h3>3. Proposed Solution</h3>
+    <p>Smart ID Assistive Mode — a universal accessibility layer triggered when a user taps their Smart ID. The system detects needs and loads an assistive UI.</p>
+    <div class="gallery">
+      <img src="assets/mockup-1.png" />
+      <img src="assets/mockup-2.png" />
+    </div>
+
+    <h3>4–5. How It Works</h3>
+    <ol>
+      <li>User taps Smart ID at kiosk/service terminal.</li>
+      <li>System reads indicators: senior, visual impairment, low literacy, motor disability.</li>
+      <li>Assistive UI loads automatically.</li>
+      <li>User navigates via large buttons, voice instructions, icons, or gesture controls.</li>
+      <li>Service completed smoothly without confusion.</li>
+    </ol>
+
+    <h3>Key Features</h3>
+    <ul>
+      <li>Large text & buttons</li>
+      <li>Multilingual voice instructions (BM, Mandarin, English)</li>
+      <li>Screen reader mode</li>
+      <li>Icon-based navigation</li>
+      <li>Gesture navigation</li>
+      <li>No-login Smart ID activation</li>
+      <li>Offline-ready kiosks</li>
+    </ul>
+
+    <h3>6. Target Users</h3>
+    <ul>
+      <li>Senior citizens</li>
+      <li>Elderly / visually impaired</li>
+      <li>Low literacy users</li>
+      <li>Motor disabilities</li>
+      <li>Non-tech-savvy users</li>
+      <li>Rural / low connectivity users</li>
+    </ul>
+
+    <h3>7. Expected Impact</h3>
+    <ul>
+      <li>Improved digital inclusion</li>
+      <li>Reduced counter queues</li>
+      <li>Faster access to public services</li>
+      <li>Less user frustration</li>
+      <li>Higher Smart ID adoption rate</li>
+      <li>Strengthened Digital Government agenda</li>
+    </ul>
+
+    <h3>8. Feasibility</h3>
+    <ul>
+      <li>Uses existing Smart ID infrastructure</li>
+      <li>Only requires extra UI layer</li>
+      <li>Low hardware cost</li>
+      <li>Compatible with kiosks & mobile</li>
+      <li>Pilot-ready for rural clinics & district offices</li>
+    </ul>
+
+    <h3>9. Closing</h3>
+    <p>Smart ID should not serve only tech-savvy users. It must be accessible to every Malaysian — regardless of age, ability, or literacy. <strong>Smart ID Assistive Mode: Digital Identity for All.</strong></p>
+  </section>
+
+  </body>
 </html>
