--- a/index.html
+++ b/index.html
@@ -91,11 +91,8 @@
   <section>
     <h2>UI Mockup Gallery</h2>
     <div class="gallery">
-      <img src="assets/mockup-1.png" alt="Mockup 1" />
-      <img src="assets/mockup-2.png" alt="Mockup 2" />
-      <img src="assets/mockup-3.png" alt="Mockup 3" />
-      <img src="assets/mockup-4.png" alt="Mockup 4" />
-      <img src="assets/mockup-5.png" alt="Mockup 5" />
+      <img src="mockup-1.png" alt="Mockup 1" />
+      <img src="mockup-2.png" alt="Mockup 2" />
     </div>
   </section>
 
@@ -140,8 +137,8 @@
     <h3>3. Proposed Solution</h3>
     <p>Smart ID Assistive Mode — a universal accessibility layer triggered when a user taps their Smart ID. The system detects needs and loads an assistive UI.</p>
     <div class="gallery">
-      <img src="assets/mockup-1.png" />
-      <img src="assets/mockup-2.png" />
+      <img src="mockup-1.png" />
+      <img src="mockup-2.png" />
     </div>
 
     <h3>4–5. How It Works</h3>
