--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <h1 class="en">Smart ID Assistive Mode</h1>
     <p class="en">Digital Identity for All — Accessible, Inclusive, Empowering</p>
 
-    <h1 class="cn">智慧身份辅助模式</h1>
+    <h1 class="cn">智能身份辅助模式</h1>
     <p class="cn">打造人人都能使用的数字身份体验</p>
 
     <h1 class="bm">Mod Bantuan Smart ID</h1>
@@ -184,7 +184,6 @@
 
     <div class="gallery">
       <img src="mockup-1.jpg" alt="Mockup 1" />
-      <img src="mockup-2.jpg" alt="Mockup 1" />
     </div>
   </section>
 
@@ -229,9 +228,9 @@
     <h2 class="cn">用户流程</h2>
     <h2 class="bm">Aliran Pengguna</h2>
 
-    <p class="en">1️ 1. Tap Smart ID → 2. System detects needs → 3. Assistive UI loads → 4. Guided steps → 5. Completed</p>
-    <p class="cn">1️ 1. 轻触 Smart ID → 2. 系统侦测需求 → 3. 载入辅助界面 → 4. 按指示操作 → 5. 完成服务</p>
-    <p class="bm">1️ 1. Sentuh Smart ID → 2. Sistem mengesan keperluan → 3. UI bantuan muncul → 4. Ikut panduan → 5. Selesai</p>
+    <p class="en"> 1. Tap Smart ID using IC→ 2. System detects needs → 3. Assistive UI loads → 4. Guided steps → 5. Completed</p>
+    <p class="cn"> 1. 用身份证轻触 Smart ID → 2. 系统侦测需求 → 3. 载入辅助界面 → 4. 按指示操作 → 5. 完成服务</p>
+    <p class="bm"> 1. Gunakan IC untuk Sentuh Smart ID → 2. Sistem mengesan keperluan → 3. UI bantuan muncul → 4. Ikut panduan → 5. Selesai</p>
   </section>
 
   <footer>
